--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -28,7 +28,7 @@
 
   <div class="container">
     <div style="padding:56.25% 0 0 0;position:relative;">
-      <iframe id="FrameId" src="https://player.vimeo.com/video/532559339?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="FrameId" src="https://player.vimeo.com/video/591489389?autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div><script src="https://player.vimeo.com/api/player.js"></script>
     <div class="btn-group btn-toggle" >
       <button id="lang-button1" type="button" onclick="ChangeSource(1);" class="btn btn-primary">Orjinal Dil (TR)</a>
@@ -46,7 +46,7 @@
           
         </form>
 
-        <embed src="toplanti.jpg" width="1700px" height="1400px" />
+        <!-- <embed src="toplanti.jpg" width="1700px" height="1400px" /> -->
         
   </div>
 
@@ -54,7 +54,7 @@
   
   <!-- footer begins -->
   <footer class="border-top text-center small text-muted py-3">
-    <p class="m-0">Copyright &copy; 2021 <a href="/" class="text-muted">Setreamm</a>. Tüm hakları saklıdır.</p>
+    <p class="m-0">Copyright &copy; 2021 <a href="/" class="text-muted">Setream</a>. Tüm hakları saklıdır.</p>
   </footer>
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
