--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -21,6 +21,8 @@
   
 <!-- header ends here -->
 
+
+
 <div class="container py-md-5">
 
   <% errors.forEach(function(message) { %>
@@ -29,7 +31,7 @@
 
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">    
-      <p class="lead text-muted">Beşeri tıbbi ürünlerin tanıtım faaliyetleri hakkındaki yönetmelik(Mart 2021) uyarınca canlı yayına katılabilmek için yandaki bilgileri doldurmanızı rica ederiz..</p>
+      <img class=" font-weight-normal img-fluid " alt="Responsive image" width="1200" height="170" src="POSTER-01.png">
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
@@ -39,24 +41,36 @@
         <% }) %>
 
           <div class="form-group">
-            <label for="username-register" class="text-muted mb-1"><small> <h4>İsim Soyisim(Name-Surname)</h4> <p> </p><h6 style="color:tomato;"></h6>  </small></label>
+            <label for="username-register" class="text-muted mb-1"><small> <h4>İsim-Soyisim (Name Surname)</h4> <p> </p><h6 style="color:tomato;"></h6>  </small></label>
             <input name="username" id="username-register" class="form-control" type="text" placeholder= "Örn: Ayşe Özer, Richard Kimble , Mehmet Yılmaz." autocomplete="off">
+          </div>
+
+          <div class="form-group">
+            <label for="e-mail-register" class="text-muted mb-1"><small>
+                <h4> E-posta adresi (E-mail address) </h4>
+              </small></label>
+            <input name="email" id="brans-register" class="form-control" type="text" placeholder="E-mail adresiniz" autocomplete="off">
           </div>
           
           <div class="form-group">
-            <label for="brans-register" class="text-muted mb-1"><small><h4> Branş(Speciality) </h4></small></label>
-            <input name="brans" id="brans-register" class="form-control" type="text" placeholder="Branşınız" autocomplete="off">
+            <label for="unvan-register" class="text-muted mb-1"><small><h4> Ünvan (Title) </h4></small></label>
+            <input name="unvan" id="brans-register" class="form-control" type="text" placeholder="Ünvanınız" autocomplete="off">
           </div>
 
           <div class="form-group">
-            <label for="sehir-register" class="text-muted mb-1"><small><h4> Şehir(City) </h4></small></label>
-            <input name="sehir" id="sehir-register" class="form-control" type="text" placeholder="Bulunduğunuz şehir" autocomplete="off">
+            <label for="firma-register" class="text-muted mb-1"><small><h4> Çalıştığınız firma (Company) </h4></small></label>
+            <input name="firma" id="sehir-register" class="form-control" type="text" placeholder="Çalıştığınız firma" autocomplete="off">
           </div>
 
-          <div class="form-group">
+          <input style="transform: scale(1.4);" id="checkbox-register" type="checkbox" name="checkbox" value="onaylandi" /> <a
+            href="PIAKVKK.pdf" target="_blank" rel="noopener noreferrer">
+            KVKK metnini okudum ve kabul ediyorum
+          </a></input>
+
+          <!-- <div class="form-group">
             <label for="tckimlik-register" class="text-muted mb-1"><small><h4> T.C. Kimlik No </h4> </small></label>
             <input name="tckimlik" id="tckimlik-register" class="form-control" type="text" placeholder="T.C. Kimlik numaranız " autocomplete="off">
-          </div>
+          </div> -->
 
           
           
