--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -13,10 +13,8 @@
 <body>
 
   <header class="header-bar mb-3";>
-    <div class="container d-flex flex-column flex-md-row align-items-center p-3">
-      <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="text-white">Setream</a></h4>
-      
-    </div>
+    <img class="my-0 mr-md-auto font-weight-normal img-fluid " alt="Responsive image" width="2000" height="2000"
+      src="BANNER.png">
   </header>
   
 <!-- header ends here -->
