--- a/views/home-dashboard.ejs
+++ b/views/home-dashboard.ejs
@@ -36,10 +36,10 @@
       <form id="create-form" action="create-item" method="POST">
         <p></p>
         <div class="form-group">  
-          <input id="create-field" name="isim" autofocus autocomplete="off" class="form-control mr-3" type="isim" placeholder="İsminiz">
+          <input id="create-field" name="isim" autofocus autocomplete="off" class="form-control mr-3" type="isim" placeholder="İsminiz - Your name">
         </div>
           <div class="d-flex">
-            <textarea id="create-field2" name="yorum" class="form-control mr-1" type="yorum" class="form-control mr-3" id="comment" cols="30" placeholder="Sorunuz"></textarea>
+            <textarea id="create-field2" name="yorum" class="form-control mr-1" type="yorum" class="form-control mr-3" id="comment" cols="30" placeholder="Sorunuz - Your question"></textarea>
             <button type="submit" class="btn btn-success">Gönder</button>
           </div>
           
